# Rivet

./: Cargo.toml
src/: main.rs
src/api/message/: get_channel_messages.rs  mod.rs
src/model/: channel.rs
