[package]
name = "Rivet"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
dotenvy = "0.15.7"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
